--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,5 +1,7 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+# This workflow will do a clean installation of node dependencies,
+# cache/restore them, build the source code, and run tests
+# across different versions of node.
+# For more information, see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
 name: Boardgames CI/CD
 
@@ -11,66 +13,43 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      
+      - name: Use Node.js 14.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14.x
+          cache: 'npm'
+      
+      - name: Starting NPM INSTALL
+        run: npm install
+      
+      - name: Running Unit Test
+        run: npm run test:unit
+      
+      - name: Display SoftUni Username
+        run: echo "rumen_dimov"
+      
+      - name: Deploy to Render
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.SERVICE_ID }}
+          api-key: ${{ secrets.RENDER_API }}
+
+  ui_tests:
+    runs-on: ubuntu-latest
+    needs: deploy
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js 14.x
-      uses: actions/setup-node@v3
-      with:
-        node-version: 14.x
-        cache: 'npm'
-    - name: Starting NPM INSTALL
-      run: npm install
-    - name: Running Unit Test
-      run: npm run test:unit
-    - name: Display SoftUni Username
-      run: echo "rumen_dimov"
-
-    - name: Deploy to Render  
-      uses: johnbeynon/render-deploy-action@v0.0.8 
-      with: 
-       service-id: ${{ secrets.SERVICE_ID }} 
-       api-key: ${{ secrets.RENDER_API }}  
-
-    ui_tests: 
-
-     runs-on: ubuntu-latest 
-
-     needs: deploy 
-
-     steps: 
-
-     - uses: actions/checkout@v2 
-
-     
-
-     - name: Use Node.js 14.x 
-
-       uses: actions/setup-node@v2 
-
-       with: 
-
-        node-version: 14.x 
-
-        cache: 'npm' 
-
-         
-
-     - name: Starting NPM INSTALL 
-
-       run: npm install 
-
-       
-
-     - name: Install Playwright Browsers 
-
-       run: npx playwright install --with-deps 
-
-    
-
-     - name: Running UI Test 
-
-       run: npm run test:ui 
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      
+      - name: Use Node.js 14.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14.x
+          cache: 'npm'
