--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,3 +1,4 @@
+
 # This workflow will do a clean installation of node dependencies,
 # cache/restore them, build the source code, and run tests
 # across different versions of node.
@@ -42,7 +43,7 @@ jobs:
 
   ui_tests:
     runs-on: ubuntu-latest
-    needs: deploy
+    needs: build
 
     steps:
       - name: Checkout Repository
@@ -53,4 +54,3 @@ jobs:
         with:
           node-version: 14.x
           cache: 'npm'
-
