--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,3 @@
-
 # This workflow will do a clean installation of node dependencies,
 # cache/restore them, build the source code, and run tests
 # across different versions of node.
@@ -19,22 +18,30 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-      
+
       - name: Use Node.js 14.x
         uses: actions/setup-node@v3
         with:
           node-version: 14.x
           cache: 'npm'
-      
+
       - name: Starting NPM INSTALL
         run: npm install
-      
+
       - name: Running Unit Test
         run: npm run test:unit
-      
+
       - name: Display SoftUni Username
         run: echo "rumen_dimov"
-      
+
+  deploy:
+    needs: [build]  # This ensures the build job is completed before deploy
+    if: success()   # Only run deploy if the build job is successful
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
       - name: Deploy to Render
         uses: johnbeynon/render-deploy-action@v0.0.8
         with:
@@ -43,12 +50,12 @@ jobs:
 
   ui_tests:
     runs-on: ubuntu-latest
-    needs: build
+    needs: deploy
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-      
+
       - name: Use Node.js 14.x
         uses: actions/setup-node@v2
         with:
@@ -60,3 +67,4 @@ jobs:
         run: npx playwright install --with-deps
       - name: Running UI Test
         run: npm run test:ui
+
